assets/css/custom.css
/* Background colors */
.bg-red {
  background-color: #9e0e0e; !important;
}

.bg-dark-red {
  background-color: #500707; !important;
}

/* Page header */
.page-header[filter-color="red"] {
    background: rgba(44, 44, 44, 0.2);
    /* For browsers that do not support gradients */
    background: -webkit-linear-gradient(90deg, rgba(44, 44, 44, 0.2), rgba(158, 14, 14, .6));
    /* For Safari 5.1 to 6.0 */
    background: -o-linear-gradient(90deg, rgba(44, 44, 44, 0.2), rgba(158, 14, 14, .6));
    /* For Opera 11.1 to 12.0 */
    background: -moz-linear-gradient(90deg, rgba(44, 44, 44, 0.2), rgba(158, 14, 14, .6));
    /* For Firefox 3.6 to 15 */
    background: linear-gradient(0deg, rgba(44, 44, 44, 0.2), rgba(158, 14, 14, .6));
    /* Standard syntax */
}

.page-header[filter-color="dark-red"] {
    background: rgba(44, 44, 44, 0.2);
    /* For browsers that do not support gradients */
    background: -webkit-linear-gradient(90deg, rgba(44, 44, 44, 0.2), rgba(80, 7, 7, .6));
    /* For Safari 5.1 to 6.0 */
    background: -o-linear-gradient(90deg, rgba(44, 44, 44, 0.2), rgba(80, 7, 7, .6));
    /* For Opera 11.1 to 12.0 */
    background: -moz-linear-gradient(90deg, rgba(44, 44, 44, 0.2), rgba(80, 7, 7, .6));
    /* For Firefox 3.6 to 15 */
    background: linear-gradient(0deg, rgba(44, 44, 44, 0.2), rgba(80, 7, 7, .6));
    /* Standard syntax */
}

/* Links */
a {
  color: #f80a10; !important;
}

/* Section colors */
.section-color-primary {
  background-color: #eee; !important;
}

.section-color-secondary {
  background-color: #aaa; !important;
}

/* Navbar and Sidebar */
@media screen and (max-width: 991px) {
  .sidebar-collapse .navbar-collapse:before {
    background: #d00606; !important;
    /* For browsers that do not support gradients */
    background: -webkit-linear-gradient(#d00606 0%, #000 80%); !important;
    /* For Safari 5.1 to 6.0 */
    background: -o-linear-gradient(#d00606 0%, #000 80%); !important;
    /* For Opera 11.1 to 12.0 */
    background: -moz-linear-gradient(#d00606 0%, #000 80%); !important;
    /* For Firefox 3.6 to 15 */
    background: linear-gradient(#d00606 0%, #000 80%); !important;
  }

  .navbar-collapse {
    max-width: 70%;
  }
}

/* Top of page */
.navbar-logo {
  height: 40%;
  width: 40%;
}

@media screen and (max-width: 767px) {
  .navbar-logo {
    height: 80%;
    width: 80%;
  }

  .h1-seo {
    margin-top: 1%;
    font-size: 28pt;
  }

  .h3-seo {
    font-size: 16pt;
  }
}

@media screen and (max-width: 991px) {
  .navbar-logo {
    margin-top: 10%;
    height: 70%;
    width: 70%;
  }
}

@media screen and (max-height: 600px) {
  .navbar-logo {
    margin-top: 3%;
    height: 45%;
    width: 45%;
  }
}

/* About */
#about {
  margin: none; !important;

}

#personal-picture {
  margin: auto;
  margin-right: none;
  margin-left: none;
  padding:  6% 7% 6% 8.5%;
}

#about h2 {
  font-size: 36pt;
}

#about-text {
  margin: auto;
  margin-right: none;
  margin-left: none;
  padding: 0 5% 0 1%;
}

@media screen and (max-width: 991px) {
  #about h2 {
    font-size: 24pt;
    text-align: center;
  }

  #about-text {
    padding: 0 5% 0 6%;
  }
}


/* Portfolio */
#portfolio {
  padding: 4%;
}

#portfolio h2 {
  font-weight: bold;
}

#portfolio h4 {
  padding-left: 2%;
}

.project {
  background-color: #999;
  padding-top: 10px;
  margin: 0 1% 2% 1%;
}

.project-image {
  margin-bottom: -6%;
  padding-right: 2%;
  padding-left: 2%;
}

@media screen and (max-width: 991px) {
  .row {
    display: block;
  }

  .project {
    margin: 0 2% 2% 2%;
    clear: both;
    align-items: center;
  }

  .project-image {
    margin-bottom: -7%;
    padding-right: 1%;
    padding-left: 1%;
  }
}

/* Contact */
#contact {
  padding: 4%;
}

/* Footer */
.footer {
  color: #fff; !important;
  padding-top: 10px;
  text-align: right;
}

/* Horizontal break */
.hr-primary, .hr-secondary {
  font-family: FontAwesome;
  text-align: center;
  line-height: 1px;
  height: 3px;
  font-size: 3em;
  border-width: 1px 0;
  border-style: solid;
  margin: none;
  margin-bottom: 30px;

  -webkit-box-sizing: content-box;
  -moz-box-sizing: content-box;
  -ms-box-sizing: content-box;
  -o-box-sizing: content-box;
  box-sizing: content-box;
}

.hr-primary {
  border-color: #bbb;
}

.hr-secondary {
  border-color: #444;
}

.hr-primary:after, .hr-secondary:after {
  content: '\f121';
  display: inline;
  padding: 0 0.3em;
}

.hr-primary:after {
  color: #888;
  background-color: #eee;
}

.hr-secondary:after {
  color: #444;
  background-color: #aaa;
}

x:-o-prefocus, .hr-primary:after, .hr-secondary:after {
  content: '';
}

